# moifits

./: LICENSE  README.md  __init__.py  image_to_observables.py  oichi2.py  oioptimize.py  plot_oifits.py  pyproject.toml  readoifits.py  vis_functions.py  writeoifits.py
examples/: fit_model_spec.json  fit_model_spec.py  fit_model_spec_torch_mcmc.py  model_fit.py  model_spec.json  ring.npy
src/moifits/: __init__.py  fitting.py  image_to_observables.py  models.py  oichi2.py  oioptimize.py  plot_oifits.py  readoifits.py  sparco.py  writeoifits.py
src/moifits/cli/: __init__.py  compare_image_oifits.py  generate_ring.py  image_to_oifits.py  plot.py  show.py
testing/: generate_image.py  model_fit.py  oichi2.jl  plot_oidata.py  show_oidata.py  test_nfft.py  test_readoifits.py  test_write.py
tests/: test_model_specs.py  test_nfft.py  test_nfft_backends.py  test_readoifits.py
tests/julia_reference/: vis_functions.jl
